# fastpi-react-loginpage

./: .gitignore  LICENSE  README.md
DOC/: backend-folder-structure.txt
README/: readme.md
server/: alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: config.py  main.py  schema.py
server/app/controller/: authentication.py  users.py
server/app/model/: person.py  users.py
server/app/repository/: auth_repo.py  base_repo.py  role.py  users.py
server/app/service/: auth_service.py  users.py
server/migrations/: env.py
server/migrations/versions/: bd88ad670e3e_initial_migration.py
